bk_ida/gccida/g2/subst_constants
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2973:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2973:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2976:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2987:4: error: expected ';' after expression
rtx op0c; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2987:5: error: use of undeclared identifier 'op0c'
rtx op0c; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2988:4: error: expected ';' after expression
rtx op0d; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2988:5: error: use of undeclared identifier 'op0d'
rtx op0d; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2989:4: error: expected ';' after expression
rtx x; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2989:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+10h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2990:6: error: use of undeclared identifier 'v63'
rtx *v63; // [rsp+18h] [rbp-60h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2991:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode compare_mode; // [rsp+20h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2992:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode compare_modea; // [rsp+20h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2993:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+24h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2994:4: error: expected ';' after expression
rtx inner; // [rsp+38h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:2994:5: error: use of undeclared identifier 'inner'
rtx inner; // [rsp+38h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:3015:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v36 = ( __int64)v8[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:3018:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v38.rtwint = ( __int64)v8->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:3019:30: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v36 == 74 && mode_class_0[*( unsigned __int8 *)( v36 + 2)] == MODE_CC ) 
                             ^~~~~~~~~~~~
                             mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/integrate.c:3025:25: error: expected expression
subst_constants( ( rtx *)&v8[1], insn, map, memonly); 
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_constants/src/obj/integrate.o] Error 1
